yacc.output
Terminals unused in grammar

   BAZINGA


State 121 conflicts: 38 reduce/reduce
State 215 conflicts: 38 reduce/reduce
State 307 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | NUMERAL
    3                   | CHARACTER
    4                   | WORD
    5                   | OPENPAR expression CLOSEPAR

    6 postfix_expression: primary_expression
    7                   | postfix_expression OPENBRACKET expression CLOSEBRACKET
    8                   | postfix_expression OPENPAR CLOSEPAR
    9                   | postfix_expression OPENPAR argument_expression_list CLOSEPAR
   10                   | postfix_expression DOT IDENTIFIER
   11                   | postfix_expression ARROW IDENTIFIER
   12                   | postfix_expression PLUSPLUS
   13                   | postfix_expression MINUSMINUS

   14 argument_expression_list: assignment_expression
   15                         | argument_expression_list COMMA assignment_expression

   16 unary_expression: postfix_expression
   17                 | PLUSPLUS unary_expression
   18                 | MINUSMINUS unary_expression
   19                 | unary_operator cast_expression
   20                 | SIZEOF unary_expression
   21                 | SIZEOF OPENPAR type_name CLOSEPAR

   22 unary_operator: STAR
   23               | PLUS
   24               | MINUS
   25               | NOT
   26               | ADDR

   27 cast_expression: unary_expression
   28                | OPENPAR type_name CLOSEPAR cast_expression

   29 multiplicative_expression: cast_expression
   30                          | multiplicative_expression STAR cast_expression
   31                          | multiplicative_expression DIVIDE cast_expression
   32                          | multiplicative_expression MOD cast_expression

   33 additive_expression: multiplicative_expression
   34                    | additive_expression PLUS multiplicative_expression
   35                    | additive_expression MINUS multiplicative_expression

   36 relational_expression: additive_expression
   37                      | relational_expression LESS additive_expression
   38                      | relational_expression GREAT additive_expression
   39                      | relational_expression LESSEQUALS additive_expression
   40                      | relational_expression GREATEQUALS additive_expression

   41 equality_expression: relational_expression
   42                    | equality_expression EQUALSEQUALS relational_expression
   43                    | equality_expression NOTEQUALS relational_expression

   44 and_expression: equality_expression

   45 exclusive_or_expression: and_expression

   46 inclusive_or_expression: exclusive_or_expression

   47 logical_and_expression: inclusive_or_expression
   48                       | logical_and_expression AND inclusive_or_expression

   49 logical_or_expression: logical_and_expression
   50                      | logical_or_expression OR logical_and_expression

   51 conditional_expression: logical_or_expression

   52 assignment_expression: conditional_expression
   53                      | unary_expression assignment_operator assignment_expression

   54 assignment_operator: EQUALS
   55                    | MULEQUALS
   56                    | DIVEQUALS
   57                    | MODEQUALS
   58                    | PLUSEQUALS
   59                    | MINUSEQUALS

   60 expression: assignment_expression
   61           | expression COMMA assignment_expression

   62 constant_expression: conditional_expression

   63 declaration: declaration_specifiers SEMICOLON
   64            | declaration_specifiers init_declarator_list SEMICOLON

   65 declaration_specifiers: storage_class_specifier
   66                       | storage_class_specifier declaration_specifiers
   67                       | type_specifier
   68                       | type_specifier declaration_specifiers
   69                       | type_qualifier
   70                       | type_qualifier declaration_specifiers

   71 init_declarator_list: init_declarator
   72                     | init_declarator_list COMMA init_declarator

   73 init_declarator: declarator
   74                | declarator EQUALS initializer

   75 storage_class_specifier: TYPEDEF
   76                        | STATIC

   77 type_specifier: VOID
   78               | CHAR
   79               | SHORT
   80               | INT
   81               | LONG
   82               | FLOAT
   83               | DOUBLE
   84               | SIGNED
   85               | UNSIGNED
   86               | struct_or_union_specifier
   87               | enum_specifier
   88               | include_statement

   89 struct_or_union_specifier: struct_or_union IDENTIFIER OPENBRACE struct_declaration_list CLOSEBRACE
   90                          | struct_or_union OPENBRACE struct_declaration_list CLOSEBRACE
   91                          | struct_or_union IDENTIFIER

   92 struct_or_union: STRUCT

   93 struct_declaration_list: struct_declaration
   94                        | struct_declaration_list struct_declaration

   95 struct_declaration: specifier_qualifier_list struct_declarator_list SEMICOLON

   96 specifier_qualifier_list: type_specifier specifier_qualifier_list
   97                         | type_specifier
   98                         | type_qualifier specifier_qualifier_list
   99                         | type_qualifier

  100 struct_declarator_list: struct_declarator
  101                       | struct_declarator_list COMMA struct_declarator

  102 struct_declarator: declarator
  103                  | ':' constant_expression
  104                  | declarator ':' constant_expression

  105 enum_specifier: ENUM OPENBRACE enumerator_list CLOSEBRACE
  106               | ENUM IDENTIFIER OPENBRACE enumerator_list CLOSEBRACE
  107               | ENUM IDENTIFIER

  108 enumerator_list: enumerator
  109                | enumerator_list COMMA enumerator

  110 enumerator: IDENTIFIER
  111           | IDENTIFIER EQUALS constant_expression

  112 type_qualifier: CONST

  113 declarator: pointer direct_declarator
  114           | direct_declarator

  115 direct_declarator: IDENTIFIER
  116                  | OPENPAR declarator CLOSEPAR
  117                  | direct_declarator OPENBRACKET constant_expression CLOSEBRACKET
  118                  | direct_declarator OPENBRACKET CLOSEBRACKET
  119                  | direct_declarator OPENPAR parameter_type_list CLOSEPAR
  120                  | direct_declarator OPENPAR identifier_list CLOSEPAR
  121                  | direct_declarator OPENPAR CLOSEPAR

  122 pointer: STAR
  123        | STAR type_qualifier_list
  124        | STAR pointer
  125        | STAR type_qualifier_list pointer

  126 type_qualifier_list: type_qualifier
  127                    | type_qualifier_list type_qualifier

  128 parameter_type_list: parameter_list
  129                    | parameter_list COMMA

  130 parameter_list: parameter_declaration
  131               | parameter_list COMMA parameter_declaration

  132 parameter_declaration: declaration_specifiers declarator
  133                      | declaration_specifiers abstract_declarator
  134                      | declaration_specifiers

  135 identifier_list: IDENTIFIER
  136                | identifier_list COMMA IDENTIFIER

  137 type_name: specifier_qualifier_list
  138          | specifier_qualifier_list abstract_declarator

  139 abstract_declarator: pointer
  140                    | direct_abstract_declarator
  141                    | pointer direct_abstract_declarator

  142 direct_abstract_declarator: OPENPAR abstract_declarator CLOSEPAR
  143                           | OPENBRACKET CLOSEBRACKET
  144                           | OPENBRACKET constant_expression CLOSEBRACKET
  145                           | direct_abstract_declarator OPENBRACKET CLOSEBRACKET
  146                           | direct_abstract_declarator OPENBRACKET constant_expression CLOSEBRACKET
  147                           | OPENPAR CLOSEPAR
  148                           | OPENPAR parameter_type_list CLOSEPAR
  149                           | direct_abstract_declarator OPENPAR CLOSEPAR
  150                           | direct_abstract_declarator OPENPAR parameter_type_list CLOSEPAR

  151 initializer: assignment_expression
  152            | OPENBRACE initializer_list CLOSEBRACE
  153            | OPENBRACE initializer_list COMMA CLOSEBRACE

  154 initializer_list: initializer
  155                 | initializer_list COMMA initializer

  156 statement: labeled_statement
  157          | declaration
  158          | compound_statement
  159          | expression_statement
  160          | selection_statement
  161          | iteration_statement
  162          | jump_statement

  163 labeled_statement: IDENTIFIER COLON statement

  164 compound_statement: OPENBRACE CLOSEBRACE
  165                   | OPENBRACE statement_list CLOSEBRACE
  166                   | OPENBRACE declaration_list CLOSEBRACE
  167                   | OPENBRACE declaration_list statement_list CLOSEBRACE

  168 declaration_list: declaration
  169                 | declaration_list declaration

  170 statement_list: statement
  171               | statement_list statement

  172 expression_statement: SEMICOLON
  173                     | expression SEMICOLON

  174 include_statement: INCLUDE LESS include_expression GREAT
  175                  | INCLUDE QUOTE include_expression QUOTE

  176 include_expression: IDENTIFIER DOT IDENTIFIER
  177                   | IDENTIFIER

  178 selection_statement: IF OPENPAR expression CLOSEPAR statement
  179                    | IF OPENPAR expression CLOSEPAR statement ELSE statement

  180 iteration_statement: WHILE OPENPAR expression CLOSEPAR statement
  181                    | DO statement WHILE OPENPAR expression CLOSEPAR SEMICOLON
  182                    | FOR OPENPAR expression_statement expression_statement CLOSEPAR statement
  183                    | FOR OPENPAR expression_statement expression_statement expression CLOSEPAR statement

  184 jump_statement: CONTINUE SEMICOLON
  185               | BREAK SEMICOLON
  186               | RETURN SEMICOLON
  187               | RETURN expression SEMICOLON

  188 translation_unit: external_declaration
  189                 | translation_unit external_declaration

  190 external_declaration: function_definition
  191                     | declaration

  192 function_definition: declaration_specifiers declarator declaration_list compound_statement
  193                    | declaration_specifiers declarator compound_statement
  194                    | declarator declaration_list compound_statement
  195                    | declarator compound_statement


Terminals, with rules where they appear

$end (0) 0
':' (58) 103 104
error (256)
GREAT (258) 38 174
LESS (259) 37 174
GREATEQUALS (260) 40
LESSEQUALS (261) 39
OPENBRACE (262) 89 90 105 106 152 153 164 165 166 167
CLOSEBRACE (263) 89 90 105 106 152 153 164 165 166 167
SEMICOLON (264) 63 64 95 172 173 181 184 185 186 187
PLUS (265) 23 34
MINUS (266) 24 35
DIVIDE (267) 31
MOD (268) 32
PLUSPLUS (269) 12 17
MINUSMINUS (270) 13 18
NOT (271) 25
EQUALSEQUALS (272) 42
EQUALS (273) 54 74 111
NOTEQUALS (274) 43
PLUSEQUALS (275) 58
MINUSEQUALS (276) 59
MULEQUALS (277) 55
DIVEQUALS (278) 56
COMMA (279) 15 61 72 101 109 129 131 136 153 155
STAR (280) 22 30 122 123 124 125
AND (281) 48
OR (282) 50
OPENPAR (283) 5 8 9 21 28 116 119 120 121 142 147 148 149 150 178 179
    180 181 182 183
CLOSEPAR (284) 5 8 9 21 28 116 119 120 121 142 147 148 149 150 178
    179 180 181 182 183
OPENBRACKET (285) 7 117 118 143 144 145 146
CLOSEBRACKET (286) 7 117 118 143 144 145 146
TYPEDEF (287) 75
INCLUDE (288) 174 175
RETURN (289) 186 187
BREAK (290) 185
IF (291) 178 179
ELSE (292) 179
STRUCT (293) 92
DO (294) 181
WHILE (295) 180 181
FOR (296) 182 183
STATIC (297) 76
SIZEOF (298) 20 21
VOID (299) 77
CONTINUE (300) 184
CONST (301) 112
UNSIGNED (302) 85
INT (303) 80
CHAR (304) 78
SHORT (305) 79
LONG (306) 81
FLOAT (307) 82
DOUBLE (308) 83
BAZINGA (309)
CHARACTER (310) 3
WORD (311) 4
IDENTIFIER (312) 1 10 11 89 91 106 107 110 111 115 135 136 163 176
    177
DOT (313) 10 176
ARROW (314) 11
MODEQUALS (315) 57
SIGNED (316) 84
ENUM (317) 105 106 107
COLON (318) 163
NUMERAL (319) 2
ADDR (320) 26
QUOTE (321) 175


Nonterminals, with rules where they appear

$accept (68)
    on left: 0
primary_expression (69)
    on left: 1 2 3 4 5, on right: 6
postfix_expression (70)
    on left: 6 7 8 9 10 11 12 13, on right: 7 8 9 10 11 12 13 16
argument_expression_list (71)
    on left: 14 15, on right: 9 15
unary_expression (72)
    on left: 16 17 18 19 20 21, on right: 17 18 20 27 53
unary_operator (73)
    on left: 22 23 24 25 26, on right: 19
cast_expression (74)
    on left: 27 28, on right: 19 28 29 30 31 32
multiplicative_expression (75)
    on left: 29 30 31 32, on right: 30 31 32 33 34 35
additive_expression (76)
    on left: 33 34 35, on right: 34 35 36 37 38 39 40
relational_expression (77)
    on left: 36 37 38 39 40, on right: 37 38 39 40 41 42 43
equality_expression (78)
    on left: 41 42 43, on right: 42 43 44
and_expression (79)
    on left: 44, on right: 45
exclusive_or_expression (80)
    on left: 45, on right: 46
inclusive_or_expression (81)
    on left: 46, on right: 47 48
logical_and_expression (82)
    on left: 47 48, on right: 48 49 50
logical_or_expression (83)
    on left: 49 50, on right: 50 51
conditional_expression (84)
    on left: 51, on right: 52 62
assignment_expression (85)
    on left: 52 53, on right: 14 15 53 60 61 151
assignment_operator (86)
    on left: 54 55 56 57 58 59, on right: 53
expression (87)
    on left: 60 61, on right: 5 7 61 173 178 179 180 181 183 187
constant_expression (88)
    on left: 62, on right: 103 104 111 117 144 146
declaration (89)
    on left: 63 64, on right: 157 168 169 191
declaration_specifiers (90)
    on left: 65 66 67 68 69 70, on right: 63 64 66 68 70 132 133 134
    192 193
init_declarator_list (91)
    on left: 71 72, on right: 64 72
init_declarator (92)
    on left: 73 74, on right: 71 72
storage_class_specifier (93)
    on left: 75 76, on right: 65 66
type_specifier (94)
    on left: 77 78 79 80 81 82 83 84 85 86 87 88, on right: 67 68 96
    97
struct_or_union_specifier (95)
    on left: 89 90 91, on right: 86
struct_or_union (96)
    on left: 92, on right: 89 90 91
struct_declaration_list (97)
    on left: 93 94, on right: 89 90 94
struct_declaration (98)
    on left: 95, on right: 93 94
specifier_qualifier_list (99)
    on left: 96 97 98 99, on right: 95 96 98 137 138
struct_declarator_list (100)
    on left: 100 101, on right: 95 101
struct_declarator (101)
    on left: 102 103 104, on right: 100 101
enum_specifier (102)
    on left: 105 106 107, on right: 87
enumerator_list (103)
    on left: 108 109, on right: 105 106 109
enumerator (104)
    on left: 110 111, on right: 108 109
type_qualifier (105)
    on left: 112, on right: 69 70 98 99 126 127
declarator (106)
    on left: 113 114, on right: 73 74 102 104 116 132 192 193 194 195
direct_declarator (107)
    on left: 115 116 117 118 119 120 121, on right: 113 114 117 118
    119 120 121
pointer (108)
    on left: 122 123 124 125, on right: 113 124 125 139 141
type_qualifier_list (109)
    on left: 126 127, on right: 123 125 127
parameter_type_list (110)
    on left: 128 129, on right: 119 148 150
parameter_list (111)
    on left: 130 131, on right: 128 129 131
parameter_declaration (112)
    on left: 132 133 134, on right: 130 131
identifier_list (113)
    on left: 135 136, on right: 120 136
type_name (114)
    on left: 137 138, on right: 21 28
abstract_declarator (115)
    on left: 139 140 141, on right: 133 138 142
direct_abstract_declarator (116)
    on left: 142 143 144 145 146 147 148 149 150, on right: 140 141
    145 146 149 150
initializer (117)
    on left: 151 152 153, on right: 74 154 155
initializer_list (118)
    on left: 154 155, on right: 152 153 155
statement (119)
    on left: 156 157 158 159 160 161 162, on right: 163 170 171 178
    179 180 181 182 183
labeled_statement (120)
    on left: 163, on right: 156
compound_statement (121)
    on left: 164 165 166 167, on right: 158 192 193 194 195
declaration_list (122)
    on left: 168 169, on right: 166 167 169 192 194
statement_list (123)
    on left: 170 171, on right: 165 167 171
expression_statement (124)
    on left: 172 173, on right: 159 182 183
include_statement (125)
    on left: 174 175, on right: 88
include_expression (126)
    on left: 176 177, on right: 174 175
selection_statement (127)
    on left: 178 179, on right: 160
iteration_statement (128)
    on left: 180 181 182 183, on right: 161
jump_statement (129)
    on left: 184 185 186 187, on right: 162
translation_unit (130)
    on left: 188 189, on right: 0 189
external_declaration (131)
    on left: 190 191, on right: 188 189
function_definition (132)
    on left: 192 193 194 195, on right: 190


state 0

    0 $accept: . translation_unit $end

    STAR        shift, and go to state 1
    OPENPAR     shift, and go to state 2
    TYPEDEF     shift, and go to state 3
    INCLUDE     shift, and go to state 4
    STRUCT      shift, and go to state 5
    STATIC      shift, and go to state 6
    VOID        shift, and go to state 7
    CONST       shift, and go to state 8
    UNSIGNED    shift, and go to state 9
    INT         shift, and go to state 10
    CHAR        shift, and go to state 11
    SHORT       shift, and go to state 12
    LONG        shift, and go to state 13
    FLOAT       shift, and go to state 14
    DOUBLE      shift, and go to state 15
    IDENTIFIER  shift, and go to state 16
    SIGNED      shift, and go to state 17
    ENUM        shift, and go to state 18

    declaration                go to state 19
    declaration_specifiers     go to state 20
    storage_class_specifier    go to state 21
    type_specifier             go to state 22
    struct_or_union_specifier  go to state 23
    struct_or_union            go to state 24
    enum_specifier             go to state 25
    type_qualifier             go to state 26
    declarator                 go to state 27
    direct_declarator          go to state 28
    pointer                    go to state 29
    include_statement          go to state 30
    translation_unit           go to state 31
    external_declaration       go to state 32
    function_definition        go to state 33


state 1

  122 pointer: STAR .
  123        | STAR . type_qualifier_list
  124        | STAR . pointer
  125        | STAR . type_qualifier_list pointer

    STAR   shift, and go to state 1
    CONST  shift, and go to state 8

    $default  reduce using rule 122 (pointer)

    type_qualifier       go to state 34
    pointer              go to state 35
    type_qualifier_list  go to state 36


state 2

  116 direct_declarator: OPENPAR . declarator CLOSEPAR

    STAR        shift, and go to state 1
    OPENPAR     shift, and go to state 2
    IDENTIFIER  shift, and go to state 16

    declarator         go to state 37
    direct_declarator  go to state 28
    pointer            go to state 29


state 3

   75 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 75 (storage_class_specifier)


state 4

  174 include_statement: INCLUDE . LESS include_expression GREAT
  175                  | INCLUDE . QUOTE include_expression QUOTE

    LESS   shift, and go to state 38
    QUOTE  shift, and go to state 39


state 5

   92 struct_or_union: STRUCT .

    $default  reduce using rule 92 (struct_or_union)


state 6

   76 storage_class_specifier: STATIC .

    $default  reduce using rule 76 (storage_class_specifier)


state 7

   77 type_specifier: VOID .

    $default  reduce using rule 77 (type_specifier)


state 8

  112 type_qualifier: CONST .

    $default  reduce using rule 112 (type_qualifier)


state 9

   85 type_specifier: UNSIGNED .

    $default  reduce using rule 85 (type_specifier)


state 10

   80 type_specifier: INT .

    $default  reduce using rule 80 (type_specifier)


state 11

   78 type_specifier: CHAR .

    $default  reduce using rule 78 (type_specifier)


state 12

   79 type_specifier: SHORT .

    $default  reduce using rule 79 (type_specifier)


state 13

   81 type_specifier: LONG .

    $default  reduce using rule 81 (type_specifier)


state 14

   82 type_specifier: FLOAT .

    $default  reduce using rule 82 (type_specifier)


state 15

   83 type_specifier: DOUBLE .

    $default  reduce using rule 83 (type_specifier)


state 16

  115 direct_declarator: IDENTIFIER .

    $default  reduce using rule 115 (direct_declarator)


state 17

   84 type_specifier: SIGNED .

    $default  reduce using rule 84 (type_specifier)


state 18

  105 enum_specifier: ENUM . OPENBRACE enumerator_list CLOSEBRACE
  106               | ENUM . IDENTIFIER OPENBRACE enumerator_list CLOSEBRACE
  107               | ENUM . IDENTIFIER

    OPENBRACE   shift, and go to state 40
    IDENTIFIER  shift, and go to state 41


state 19

  191 external_declaration: declaration .

    $default  reduce using rule 191 (external_declaration)


state 20

   63 declaration: declaration_specifiers . SEMICOLON
   64            | declaration_specifiers . init_declarator_list SEMICOLON
  192 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  193                    | declaration_specifiers . declarator compound_statement

    SEMICOLON   shift, and go to state 42
    STAR        shift, and go to state 1
    OPENPAR     shift, and go to state 2
    IDENTIFIER  shift, and go to state 16

    init_declarator_list  go to state 43
    init_declarator       go to state 44
    declarator            go to state 45
    direct_declarator     go to state 28
    pointer               go to state 29


state 21

   65 declaration_specifiers: storage_class_specifier .
   66                       | storage_class_specifier . declaration_specifiers

    TYPEDEF   shift, and go to state 3
    INCLUDE   shift, and go to state 4
    STRUCT    shift, and go to state 5
    STATIC    shift, and go to state 6
    VOID      shift, and go to state 7
    CONST     shift, and go to state 8
    UNSIGNED  shift, and go to state 9
    INT       shift, and go to state 10
    CHAR      shift, and go to state 11
    SHORT     shift, and go to state 12
    LONG      shift, and go to state 13
    FLOAT     shift, and go to state 14
    DOUBLE    shift, and go to state 15
    SIGNED    shift, and go to state 17
    ENUM      shift, and go to state 18

    $default  reduce using rule 65 (declaration_specifiers)

    declaration_specifiers     go to state 46
    storage_class_specifier    go to state 21
    type_specifier             go to state 22
    struct_or_union_specifier  go to state 23
    struct_or_union            go to state 24
    enum_specifier             go to state 25
    type_qualifier             go to state 26
    include_statement          go to state 30


state 22

   67 declaration_specifiers: type_specifier .
   68                       | type_specifier . declaration_specifiers

    TYPEDEF   shift, and go to state 3
    INCLUDE   shift, and go to state 4
    STRUCT    shift, and go to state 5
    STATIC    shift, and go to state 6
    VOID      shift, and go to state 7
    CONST     shift, and go to state 8
    UNSIGNED  shift, and go to state 9
    INT       shift, and go to state 10
    CHAR      shift, and go to state 11
    SHORT     shift, and go to state 12
    LONG      shift, and go to state 13
    FLOAT     shift, and go to state 14
    DOUBLE    shift, and go to state 15
    SIGNED    shift, and go to state 17
    ENUM      shift, and go to state 18

    $default  reduce using rule 67 (declaration_specifiers)

    declaration_specifiers     go to state 47
    storage_class_specifier    go to state 21
    type_specifier             go to state 22
    struct_or_union_specifier  go to state 23
    struct_or_union            go to state 24
    enum_specifier             go to state 25
    type_qualifier             go to state 26
    include_statement          go to state 30


state 23

   86 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 86 (type_specifier)


state 24

   89 struct_or_union_specifier: struct_or_union . IDENTIFIER OPENBRACE struct_declaration_list CLOSEBRACE
   90                          | struct_or_union . OPENBRACE struct_declaration_list CLOSEBRACE
   91                          | struct_or_union . IDENTIFIER

    OPENBRACE   shift, and go to state 48
    IDENTIFIER  shift, and go to state 49


state 25

   87 type_specifier: enum_specifier .

    $default  reduce using rule 87 (type_specifier)


state 26

   69 declaration_specifiers: type_qualifier .
   70                       | type_qualifier . declaration_specifiers

    TYPEDEF   shift, and go to state 3
    INCLUDE   shift, and go to state 4
    STRUCT    shift, and go to state 5
    STATIC    shift, and go to state 6
    VOID      shift, and go to state 7
    CONST     shift, and go to state 8
    UNSIGNED  shift, and go to state 9
    INT       shift, and go to state 10
    CHAR      shift, and go to state 11
    SHORT     shift, and go to state 12
    LONG      shift, and go to state 13
    FLOAT     shift, and go to state 14
    DOUBLE    shift, and go to state 15
    SIGNED    shift, and go to state 17
    ENUM      shift, and go to state 18

    $default  reduce using rule 69 (declaration_specifiers)

    declaration_specifiers     go to state 50
    storage_class_specifier    go to state 21
    type_specifier             go to state 22
    struct_or_union_specifier  go to state 23
    struct_or_union            go to state 24
    enum_specifier             go to state 25
    type_qualifier             go to state 26
    include_statement          go to state 30


state 27

  194 function_definition: declarator . declaration_list compound_statement
  195                    | declarator . compound_statement

    OPENBRACE  shift, and go to state 51
    TYPEDEF    shift, and go to state 3
    INCLUDE    shift, and go to state 4
    STRUCT     shift, and go to state 5
    STATIC     shift, and go to state 6
    VOID       shift, and go to state 7
    CONST      shift, and go to state 8
    UNSIGNED   shift, and go to state 9
    INT        shift, and go to state 10
    CHAR       shift, and go to state 11
    SHORT      shift, and go to state 12
    LONG       shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    SIGNED     shift, and go to state 17
    ENUM       shift, and go to state 18

    declaration                go to state 52
    declaration_specifiers     go to state 53
    storage_class_specifier    go to state 21
    type_specifier             go to state 22
    struct_or_union_specifier  go to state 23
    struct_or_union            go to state 24
    enum_specifier             go to state 25
    type_qualifier             go to state 26
    compound_statement         go to state 54
    declaration_list           go to state 55
    include_statement          go to state 30


state 28

  114 declarator: direct_declarator .
  117 direct_declarator: direct_declarator . OPENBRACKET constant_expression CLOSEBRACKET
  118                  | direct_declarator . OPENBRACKET CLOSEBRACKET
  119                  | direct_declarator . OPENPAR parameter_type_list CLOSEPAR
  120                  | direct_declarator . OPENPAR identifier_list CLOSEPAR
  121                  | direct_declarator . OPENPAR CLOSEPAR

    OPENPAR      shift, and go to state 56
    OPENBRACKET  shift, and go to state 57

    $default  reduce using rule 114 (declarator)


state 29

  113 declarator: pointer . direct_declarator

    OPENPAR     shift, and go to state 2
    IDENTIFIER  shift, and go to state 16

    direct_declarator  go to state 58


state 30

   88 type_specifier: include_statement .

    $default  reduce using rule 88 (type_specifier)


state 31

    0 $accept: translation_unit . $end
  189 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 59
    STAR        shift, and go to state 1
    OPENPAR     shift, and go to state 2
    TYPEDEF     shift, and go to state 3
    INCLUDE     shift, and go to state 4
    STRUCT      shift, and go to state 5
    STATIC      shift, and go to state 6
    VOID        shift, and go to state 7
    CONST       shift, and go to state 8
    UNSIGNED    shift, and go to state 9
    INT         shift, and go to state 10
    CHAR        shift, and go to state 11
    SHORT       shift, and go to state 12
    LONG        shift, and go to state 13
    FLOAT       shift, and go to state 14
    DOUBLE      shift, and go to state 15
    IDENTIFIER  shift, and go to state 16
    SIGNED      shift, and go to state 17
    ENUM        shift, and go to state 18

    declaration                go to state 19
    declaration_specifiers     go to state 20
    storage_class_specifier    go to state 21
    type_specifier             go to state 22
    struct_or_union_specifier  go to state 23
    struct_or_union            go to state 24
    enum_specifier             go to state 25
    type_qualifier             go to state 26
    declarator                 go to state 27
    direct_declarator          go to state 28
    pointer                    go to state 29
    include_statement          go to state 30
    external_declaration       go to state 60
    function_definition        go to state 33


state 32

  188 translation_unit: external_declaration .

    $default  reduce using rule 188 (translation_unit)


state 33

  190 external_declaration: function_definition .

    $default  reduce using rule 190 (external_declaration)


state 34

  126 type_qualifier_list: type_qualifier .

    $default  reduce using rule 126 (type_qualifier_list)


state 35

  124 pointer: STAR pointer .

    $default  reduce using rule 124 (pointer)


state 36

  123 pointer: STAR type_qualifier_list .
  125        | STAR type_qualifier_list . pointer
  127 type_qualifier_list: type_qualifier_list . type_qualifier

    STAR   shift, and go to state 1
    CONST  shift, and go to state 8

    $default  reduce using rule 123 (pointer)

    type_qualifier  go to state 61
    pointer         go to state 62


state 37

  116 direct_declarator: OPENPAR declarator . CLOSEPAR

    CLOSEPAR  shift, and go to state 63


state 38

  174 include_statement: INCLUDE LESS . include_expression GREAT

    IDENTIFIER  shift, and go to state 64

    include_expression  go to state 65


state 39

  175 include_statement: INCLUDE QUOTE . include_expression QUOTE

    IDENTIFIER  shift, and go to state 64

    include_expression  go to state 66


state 40

  105 enum_specifier: ENUM OPENBRACE . enumerator_list CLOSEBRACE

    IDENTIFIER  shift, and go to state 67

    enumerator_list  go to state 68
    enumerator       go to state 69


state 41

  106 enum_specifier: ENUM IDENTIFIER . OPENBRACE enumerator_list CLOSEBRACE
  107               | ENUM IDENTIFIER .

    OPENBRACE  shift, and go to state 70

    $default  reduce using rule 107 (enum_specifier)


state 42

   63 declaration: declaration_specifiers SEMICOLON .

    $default  reduce using rule 63 (declaration)


state 43

   64 declaration: declaration_specifiers init_declarator_list . SEMICOLON
   72 init_declarator_list: init_declarator_list . COMMA init_declarator

    SEMICOLON  shift, and go to state 71
    COMMA      shift, and go to state 72


state 44

   71 init_declarator_list: init_declarator .

    $default  reduce using rule 71 (init_declarator_list)


state 45

   73 init_declarator: declarator .
   74                | declarator . EQUALS initializer
  192 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  193                    | declaration_specifiers declarator . compound_statement

    OPENBRACE  shift, and go to state 51
    EQUALS     shift, and go to state 73
    TYPEDEF    shift, and go to state 3
    INCLUDE    shift, and go to state 4
    STRUCT     shift, and go to state 5
    STATIC     shift, and go to state 6
    VOID       shift, and go to state 7
    CONST      shift, and go to state 8
    UNSIGNED   shift, and go to state 9
    INT        shift, and go to state 10
    CHAR       shift, and go to state 11
    SHORT      shift, and go to state 12
    LONG       shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    SIGNED     shift, and go to state 17
    ENUM       shift, and go to state 18

    $default  reduce using rule 73 (init_declarator)

    declaration                go to state 52
    declaration_specifiers     go to state 53
    storage_class_specifier    go to state 21
    type_specifier             go to state 22
    struct_or_union_specifier  go to state 23
    struct_or_union            go to state 24
    enum_specifier             go to state 25
    type_qualifier             go to state 26
    compound_statement         go to state 74
    declaration_list           go to state 75
    include_statement          go to state 30


state 46

   66 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 66 (declaration_specifiers)


state 47

   68 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 68 (declaration_specifiers)


state 48

   90 struct_or_union_specifier: struct_or_union OPENBRACE . struct_declaration_list CLOSEBRACE

    INCLUDE   shift, and go to state 4
    STRUCT    shift, and go to state 5
    VOID      shift, and go to state 7
    CONST     shift, and go to state 8
    UNSIGNED  shift, and go to state 9
    INT       shift, and go to state 10
    CHAR      shift, and go to state 11
    SHORT     shift, and go to state 12
    LONG      shift, and go to state 13
    FLOAT     shift, and go to state 14
    DOUBLE    shift, and go to state 15
    SIGNED    shift, and go to state 17
    ENUM      shift, and go to state 18

    type_specifier             go to state 76
    struct_or_union_specifier  go to state 23
    struct_or_union            go to state 24
    struct_declaration_list    go to state 77
    struct_declaration         go to state 78
    specifier_qualifier_list   go to state 79
    enum_specifier             go to state 25
    type_qualifier             go to state 80
    include_statement          go to state 30


state 49

   89 struct_or_union_specifier: struct_or_union IDENTIFIER . OPENBRACE struct_declaration_list CLOSEBRACE
   91                          | struct_or_union IDENTIFIER .

    OPENBRACE  shift, and go to state 81

    $default  reduce using rule 91 (struct_or_union_specifier)


state 50

   70 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 70 (declaration_specifiers)


state 51

  164 compound_statement: OPENBRACE . CLOSEBRACE
  165                   | OPENBRACE . statement_list CLOSEBRACE
  166                   | OPENBRACE . declaration_list CLOSEBRACE
  167                   | OPENBRACE . declaration_list statement_list CLOSEBRACE

    OPENBRACE   shift, and go to state 51
    CLOSEBRACE  shift, and go to state 82
    SEMICOLON   shift, and go to state 83
    PLUS        shift, and go to state 84
    MINUS       shift, and go to state 85
    PLUSPLUS    shift, and go to state 86
    MINUSMINUS  shift, and go to state 87
    NOT         shift, and go to state 88
    STAR        shift, and go to state 89
    OPENPAR     shift, and go to state 90
    TYPEDEF     shift, and go to state 3
    INCLUDE     shift, and go to state 4
    RETURN      shift, and go to state 91
    BREAK       shift, and go to state 92
    IF          shift, and go to state 93
    STRUCT      shift, and go to state 5
    DO          shift, and go to state 94
    WHILE       shift, and go to state 95
    FOR         shift, and go to state 96
    STATIC      shift, and go to state 6
    SIZEOF      shift, and go to state 97
    VOID        shift, and go to state 7
    CONTINUE    shift, and go to state 98
    CONST       shift, and go to state 8
    UNSIGNED    shift, and go to state 9
    INT         shift, and go to state 10
    CHAR        shift, and go to state 11
    SHORT       shift, and go to state 12
    LONG        shift, and go to state 13
    FLOAT       shift, and go to state 14
    DOUBLE      shift, and go to state 15
    CHARACTER   shift, and go to state 99
    WORD        shift, and go to state 100
    IDENTIFIER  shift, and go to state 101
    SIGNED      shift, and go to state 17
    ENUM        shift, and go to state 18
    NUMERAL     shift, and go to state 102
    ADDR        shift, and go to state 103
